--- a/terceira lista/ex1/ex1.html
+++ b/terceira lista/ex1/ex1.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
-            background: rgba(16, 16, 173, 0.852);
-        }
+      body{
+        background-color: rgb(111, 111, 166);
+      }
         *{padding: 0px;
             margin: 0px;
         }
@@ -16,6 +16,7 @@
             text-align: center;
             margin: 20px;
             color: #fff;
+           
         }
         form{
             display: flex;
