--- a/terceira lista/ex28/ex28.html
+++ b/terceira lista/ex28/ex28.html
@@ -55,9 +55,9 @@
     }
 </style>
 <body>
- <script src="ex28.js"></script>
+    <script src="ex28.js"></script>
    
-   
+   <p id="teste">t</p>
     <form>
         
         <!--Todos os blocos-->
@@ -283,6 +283,7 @@
      
         <input type="button" value="Calcular" onclick="calcular()">
     </form>
+
     <p id="teste"></p>
    
 </body>
